experiments/03-network-policies-realistic/basic/03-services-basic.yaml
apiVersion: v1
kind: Service
metadata:
  name: netpol-basic
  namespace: default
spec:
  selector:
    app: netpol-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
